<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_perfil"
            android:icon="@drawable/profile"
            android:title="@string/menu_perfil" />
        <item
            android:id="@+id/nav_asistencia"
            android:icon="?android:attr/actionModeFindDrawable"
            android:title="@string/menu_asistencia" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/logout"
            android:title="@string/menu_logout" />

        <item
            android:id="@+id/nav_partediario"
            android:icon="@android:drawable/ic_menu_edit"
            android:title="@string/menu_partediario" />

        <item
            android:id="@+id/informesFragment"
            android:icon="@android:drawable/ic_menu_sort_by_size"
            android:title="@string/menu_informes" />
    </group>
</menu>